--- a/week4/multipleRequests/multipleRequests.css
+++ b/week4/multipleRequests/multipleRequests.css
@@ -2,3 +2,7 @@ body {
     font-family: 'Open Sans', sans-serif;
     text-align: center;
 }
+.backPage {
+    background-color: navy;
+    color: teal;
+}
