--- a/week4/multipleRequests/multipleRequests.css
+++ b/week4/multipleRequests/multipleRequests.css
@@ -10,10 +10,23 @@ body {
 }
 .title1 {
     font-family: 'Creepster', cursive;
+    font-size: 90px;
 }
 .title2 {
     font-family: 'Creepster', cursive;
+    font-size: 90px;
 }
-a :backPage {
-    color: white;
+a {
+  text-decoration: none;  
+  color: #3a4767;
+  font-family: 'Roboto', sans-serif;
+  font-size: 20px;
+}
+a:hover {
+    font-family: 'Creepster', cursive;
+    font-size: 40px;
+}
+.btn {
+    height: 40px;
+    font-size: 20px;
 }
